inicio desarrollo de cambio de password

--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,4 @@
-REACT_APP_URL=https://emergencia24horas.segurospiramide.com/node/express/servicios/api
+REACT_APP_URL=http://10.128.49.125:5000/api
 
-REACT_APP_URL_DESA=http://10.128.49.125:5000/api
+REACT_APP_URL_DESA=https://emergencia24horas.segurospiramide.com/node/express/servicios/api
+
