separa btns apps a un componente

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Aló 24 Horas",
-  "name": "Aló 24 Horas",
+  "short_name": "Aló José 24",
+  "name": "Aló José 24",
   "icons": [
     {
       "src": "logoAlo.png",
