arregla bug cuando se cierra el modal de solicitud

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Aló José 24",
-  "name": "Aló José 24",
+  "short_name": "Aló 24",
+  "name": "Aló 24",
   "icons": [
     {
       "src": "logoAlo.png",
