--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 REACT_APP_URL_DESA = http://10.128.49.125:5000/api
 
-REACT_APP_URL_PROD= https://emergencia24horas.segurospiramide.com/node/express/servicios/api
+REACT_APP_URL_PROD1=  https://emergencia24horas.segurospiramide.com/node/express/servicios/api
+
+REACT_APP_URL_PROD = https://asesores.segurospiramide.com/asg-api/dbo/buzon_asistencia
 
 REACT_APP_ENV = production 
